--- a/locale/kk/LC_MESSAGES/django.po
+++ b/locale/kk/LC_MESSAGES/django.po
@@ -427,3 +427,36 @@ msgstr "Тіркелгіңіз бар ма?"
 
 msgid "Истекает"
 msgstr "Мерзімі аяқталады"
+
+msgid "Отзывы"
+msgstr "Тұтынушы пікірлері"
+
+msgid "Оставить отзыв"
+msgstr "Пікір қалдыру"
+
+msgid "Чтобы оставить отзыв, "
+msgstr "Пікір қалдыру үшін "
+
+msgid "войдите в аккаунт"
+msgstr "сайтқа тіркеліңіз"
+
+msgid "Пока нет отзывов"
+msgstr "Әзірге пікірлер жоқ"
+
+msgid "Чем различаются экскурсии?"
+msgstr "Экскурсиялар қалай ерекшеленеді?"
+
+msgid "Индивидуальные экскурсии"
+msgstr "Жеке"
+
+msgid "Гид проведёт экскурсию только для вас и ваших друзей."
+msgstr "Гид тек сізге және сіздің достарыңызға экскурсия жасайды."
+
+msgid "Гид формирует группу. Вместе с вами узнавать новое будут другие туристы."
+msgstr "Гид топ құрады. Сізбен бірге басқа туристер жаңа нәрселерді үйренеді."
+
+msgid "Безопасный и увлекательный тур с простым маршрутом, играми и развлечениями для детей."
+msgstr "Балаларға арналған қарапайым маршрутпен, ойындармен және ойын-сауықпен қауіпсіз және қызықты тур."
+
+msgid "Отзывы покупателей"
+msgstr "Тұтынушы пікірлері"
