--- a/locale/kk/LC_MESSAGES/django.po
+++ b/locale/kk/LC_MESSAGES/django.po
@@ -440,8 +440,50 @@ msgstr "Пікір қалдыру үшін "
 msgid "войдите в аккаунт"
 msgstr "сайтқа тіркеліңіз"
 
+msgid "Редактировать"
+msgstr "Өзгерту"
+
+msgid "Сохранить"
+msgstr "Сақтау"
+
 msgid "Пока нет отзывов"
 msgstr "Әзірге пікірлер жоқ"
+
+msgid "Сохранить аватар"
+msgstr "Аватарды жүктеп салу"
+
+msgid "Файл не выбран"
+msgstr "Файл таңдалмаған"
+
+msgid "Выберите файл"
+msgstr "Файлды таңданыз"
+
+msgid "Пожалуйста, подготовьте точную сумму для оплаты гиду при встрече."
+msgstr "Кездесу кезінде гидке төлеу үшін нақты соманы дайындаңыз."
+
+msgid "Гид свяжется с вами для подтверждения деталей и возможности оплаты наличными."
+msgstr "Нұсқаулық мәліметтерді және қолма-қол ақшамен төлеу мүмкіндігін талқылау үшін сізбен гид байланысады."
+
+msgid "Подтвердить (Наличные)"
+msgstr "Төлеу (Қолма-қол)"
+
+msgid "Выберите способ оплаты:"
+msgstr "Төлем әдісін таңдаңыз:"
+
+msgid "Наличные"
+msgstr "Қолма-қол ақша"
+
+msgid "Подтвердить (Криптовалюта)"
+msgstr "Төлеу (Криптовалюта)"
+
+msgid "После совершения перевода (это макет), пожалуйста, свяжитесь с нашей поддержкой для подтверждения платежа. Этот способ оплаты является демонстрационным."
+msgstr "Аударым жасалғаннан кейін (бұл макет) төлемді растау үшін біздің қолдауымызға хабарласыңыз. Бұл төлем әдісі демонстрациялық болып табылады."
+
+msgid "Аватар успешно обновлён!"
+msgstr "Аватар сәтті жаңартылды!"
+
+msgid "Выберите валюту для оплаты:"
+msgstr "Төлем үшін валютаны таңдаңыз:"
 
 msgid "Чем различаются экскурсии?"
 msgstr "Экскурсиялар қалай ерекшеленеді?"
