--- a/locale/kk/LC_MESSAGES/django.po
+++ b/locale/kk/LC_MESSAGES/django.po
@@ -27,7 +27,7 @@ msgstr ""
 #: .\excursionapp\templates\excursions.html:6
 #: .\excursionapp\templates\excursions.html:20
 msgid "Все Экскурсии"
-msgstr "Экскурсиялар"
+msgstr "Барлық экскурсиялар"
 
 #: .\excursionapp\templates\excursions.html:23
 #: .\excursionapp\templates\index.html:27
@@ -58,14 +58,7 @@ msgstr "Жеке"
 msgid "Семейные"
 msgstr "Отбасылық"
 
-#: .\excursionapp\templates\excursions.html:44
-#: .\venv\Lib\site-packages\django\db\models\fields\__init__.py:1863
-msgid "Duration"
-msgstr ""
 
-#: .\excursionapp\templates\excursions.html:20
-msgid "Все экскурсии"
-msgstr "Барлық экскурсиялар"
 
 #: .\excursionapp\templates\excursions.html:45
 msgid "Длительность"
@@ -83,9 +76,6 @@ msgstr "1 күн"
 msgid "Несколько дней"
 msgstr "Бірнеше күн"
 
-#: .\excursionapp\templates\excursions.html:53
-msgid "Language"
-msgstr ""
 
 #: .\excursionapp\templates\excursions.html:54
 msgid "Язык"
@@ -431,6 +421,9 @@ msgstr "Мерзімі аяқталады"
 msgid "Отзывы"
 msgstr "Тұтынушы пікірлері"
 
+msgid "Пока нет отзывов."
+msgstr "Әзірге пікірлер жоқ."
+
 msgid "Оставить отзыв"
 msgstr "Пікір қалдыру"
 
@@ -590,6 +583,8 @@ msgstr "Турагентті жасау кезінде қате: %s"
 msgid "Данные турагента успешно обновлены"
 msgstr "Турагент деректері сәтті жаңартылды"
 
+
+
 msgid "Ошибка при обновлении: %s"
 msgstr "Жаңарту кезінде қате: %s"
 
@@ -638,8 +633,21 @@ msgstr "Барлық өрістерді толтыру қажет"
 msgid "Сообщение успешно отправлено"
 msgstr "Хабарлама сәтті жіберілді"
 
+msgid "Отправить"
+msgstr "Жіберу"
+
 msgid "Нет прав на удаление этого отзыва."
 msgstr "Бұл пікірді жоюға рұқсат жоқ."
+
+msgid "Ваш отзыв..."
+msgstr "Сіздің пікіріңіз..."
+
+
+msgid "Ваша оценка"
+msgstr "Сіздің бағаңыз"
+
+msgid "Удалить"
+msgstr "Жою"
 
 msgid "Отзыв успешно удалён"
 msgstr "Пікір сәтті жойылды"
@@ -652,3 +660,150 @@ msgstr "Пікір мәтіні бос болмауы керек."
 
 msgid "Отзыв обновлён."
 msgstr "Пікір жаңартылды."
+
+
+# Create Excursion Page specific translations for Kazakh
+msgid "Создание новой экскурсии"
+msgstr "Жаңа экскурсия құру"
+
+msgid "Название экскурсии"
+msgstr "Экскурсия атауы"
+
+msgid "Введите название экскурсии"
+msgstr "Экскурсия атауын енгізіңіз"
+
+msgid "Подробное описание экскурсии"
+msgstr "Экскурсияның толық сипаттамасы"
+
+msgid "Программа экскурсии"
+msgstr "Экскурсия бағдарламасы"
+
+msgid "Укажите подробную программу экскурсии по времени, например:&#10;05:30 — сбор на месте встречи&#10;05:45 — выезд из Алматы&#10;08:45-10:45 — прогулка по каньону"
+msgstr "Экскурсияның толық бағдарламасын уақыты бойынша көрсетіңіз, мысалы:&#10;05:30 — кездесу орнында жиналу&#10;05:45 — Алматыдан шығу&#10;08:45-10:45 — каньонда серуендеу"
+
+msgid "Укажите подробную программу экскурсии по времени"
+msgstr "Экскурсияның толық бағдарламасын уақыты бойынша көрсетіңіз"
+
+msgid "Местоположение"
+msgstr "Орналасқан жері"
+
+msgid "Например: Алматы, Астана и т.д."
+msgstr "Мысалы: Алматы, Астана және т.б."
+
+msgid "Адрес места встречи"
+msgstr "Кездесу орнының мекенжайы"
+
+msgid "Укажите точный адрес места встречи"
+msgstr "Кездесу орнының нақты мекенжайын көрсетіңіз"
+
+msgid "Укажите полный адрес места встречи для отображения на карте"
+msgstr "Картада көрсету үшін кездесу орнының толық мекенжайын көрсетіңіз"
+
+msgid "Место окончания экскурсии"
+msgstr "Экскурсияның аяқталатын орны"
+
+msgid "Укажите место окончания экскурсии"
+msgstr "Экскурсияның аяқталатын орнын көрсетіңіз"
+
+msgid "Укажите место, где закончится экскурсия (если отличается от места встречи)"
+msgstr "Экскурсия аяқталатын жерді көрсетіңіз (егер кездесу орнынан өзгеше болса)"
+
+msgid "Выберите продолжительность"
+msgstr "Ұзақтығын таңдаңыз"
+
+msgid "Количество дней"
+msgstr "Күндер саны"
+
+msgid "Укажите количество дней (минимум 2)"
+msgstr "Күндер санын көрсетіңіз (ең азы 2)"
+
+msgid "Время начала"
+msgstr "Басталу уақыты"
+
+msgid "Выберите время начала"
+msgstr "Басталу уақытын таңдаңыз"
+
+msgid "Время окончания"
+msgstr "Аяқталу уақыты"
+
+msgid "Выберите время окончания"
+msgstr "Аяқталу уақытын таңдаңыз"
+
+msgid "Тип группы"
+msgstr "Топ түрі"
+
+msgid "Выберите тип группы"
+msgstr "Топ түрін таңдаңыз"
+
+msgid "Языки проведения"
+msgstr "Өткізу тілдері"
+
+msgid "Можно выбрать несколько языков"
+msgstr "Бірнеше тіл таңдауға болады"
+
+msgid "Цена (₸)"
+msgstr "Бағасы (₸)"
+
+msgid "Введите стоимость экскурсии"
+msgstr "Экскурсия құнын енгізіңіз"
+
+msgid "Имя гида"
+msgstr "Гидтің аты"
+
+msgid "Введите имя гида"
+msgstr "Гидтің атын енгізіңіз"
+
+msgid "Аватар гида"
+msgstr "Гидтің аватары"
+
+msgid "Выберите аватарку"
+msgstr "Аватарды таңдаңыз"
+
+msgid "Предпросмотр аватарки"
+msgstr "Аватарды алдын ала қарау"
+
+msgid "Услуги"
+msgstr "Қызметтер"
+
+msgid "Отметьте услуги, которые включены в стоимость экскурсии"
+msgstr "Экскурсия құнына кіретін қызметтерді белгілеңіз"
+
+msgid "Изображения экскурсии"
+msgstr "Экскурсия суреттері"
+
+msgid "Выберите несколько изображений"
+msgstr "Бірнеше сурет таңдаңыз"
+
+msgid "Файлы не выбраны"
+msgstr "Файлдар таңдалмаған"
+
+msgid "Предпросмотр изображений"
+msgstr "Суреттерді алдын ала қарау"
+
+msgid "Выберите одно или несколько изображений. При загрузке новых, старые будут удалены."
+msgstr "Бір немесе бірнеше сурет таңдаңыз. Жаңа суреттерді жүктеген кезде, ескілері жойылады."
+
+msgid "Выберите даты"
+msgstr "Күндерді таңдаңыз"
+
+msgid "Выберите несколько дат, когда экскурсия будет доступна"
+msgstr "Экскурсия қолжетімді болатын бірнеше күнді таңдаңыз"
+
+# JS Messages for create_excursion.js
+msgid "Пожалуйста, заполните все обязательные поля."
+msgstr "Барлық міндетті өрістерді толтырыңыз."
+
+msgid "Обработка"
+msgstr "Өңдеу"
+
+msgid "Создание экскурсии..."
+msgstr "Экскурсия құрылуда..."
+
+msgid "Список турагентов"
+msgstr "Турагенттерінің тізімі"
+
+msgid "Изменить"
+msgstr "Өзгерту"
+
+msgid "Новый пароль (оставьте пустым, чтобы не менять):"
+msgstr "Жаңа құпия сөз (өзгертпеу үшін бос қалдырыңыз):"
