--- a/locale/kk/LC_MESSAGES/django.po
+++ b/locale/kk/LC_MESSAGES/django.po
@@ -807,3 +807,18 @@ msgstr "Өзгерту"
 
 msgid "Новый пароль (оставьте пустым, чтобы не менять):"
 msgstr "Жаңа құпия сөз (өзгертпеу үшін бос қалдырыңыз):"
+
+msgid "Редактирование турагента"
+msgstr "Турагентті өзгерту"
+
+msgid "Напишите нам"
+msgstr "Бізге жазыңыз"
+
+msgid "Ваш email"
+msgstr "Сіздің Email"
+
+msgid "Сообщение"
+msgstr "Хабар"
+
+msgid "Опишите ваш вопрос"
+msgstr "Сұрағыңызды сипаттаңыз"
